# bin-extractor

./: .gitignore  Cargo.toml  README.md
src/: decrypt.rs  extract.rs  gamedata.rs  main.rs
